Fixed collapsedTablero
Arreglado el tabler colapasado solo con :before, no es necesario jQuery mobile

--- a/css/table-styles.css
+++ b/css/table-styles.css
@@ -177,7 +177,11 @@ table{
 
 }
 
-.innerTable .firstAndLast{
+.innerTable .number0{
 	border-left:none !important;
+t;
+}
+.innerTable .number7{
 	border-right:none !important;
+
 }
